<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/act2"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <EditText
        android:id="@+id/editTextnum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="68dp"
        android:layout_marginTop="67dp"
        android:ems="10"
        android:inputType="number"
        android:hint="Number1" />

    <EditText
        android:id="@+id/editTextnum2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTextnum1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="144dp"
        android:ems="10"
        android:hint="Namber2"
        android:inputType="number" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="130dp"
        android:text="Button" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="168dp"
        android:text="Result"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnav"
        android:onClick="tonavact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/add"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="91dp"
        android:text="navigate" />
</RelativeLayout>