<resources>
    <string name="app_name">TestTrial</string>
    <string name="title_activity_navact">Navact</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="input_placeholder">Write a message</string>



    <string-array name="language">
        <item>Choose your Language</item>
        <item>Hindi</item>
        <item>Tamil</item>
        <item>Russian</item>
        <item>Chinies</item>
        <item>African</item>
        <item>Arabic</item>
        <item>Armenian</item>
        <item>Arizon</item>
        <item>Atlantic</item>
        <item>ackland local</item>
        <item>Armenian local</item>
        <item>Bengali local</item>



    </string-array>




</resources>
